--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glovo-backend",
+  "name": "crypto-tracker-backend",
   "version": "1.0.0",
   "description": "Crypto Tracker application backend",
   "main": "index.js",
